@@ -97,6 +97,7 @@ StatusCode Muon::MuonInertMaterialBuilder::initialize()
     MsgStream log(msgSvc(), name());
 
     StatusCode s = AlgTool::initialize();
+    if (s.isFailure() ) log<< MSG::INFO << "failing to initialize?" << endreq;
 
     // Get DetectorStore service
     //
