@@ -1,3 +1,10 @@
+2007-06-27 Sarka Todorova <sarka.todorova@cern.ch>
+	* couple of fixes concerning the identification:  
+        - misidentified phi index for TGC stations fixed
+	- reference position added for RPC/CSC, as well as check of TGC displacement
+	* unchecked StatusCode in initialization fixed (?)
+	* tagged as MuonTrackingGeometry-00-00-47  
+
 2007-05-24 Sarka Todorova <sarka.todorova@cern.ch>
         * fix material properties in spacer (wrong zOverAtimesRho)
 	* tagged as MuonTrackingGeometry-00-00-46
